css/index.css
    
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

.contain {
	width: 1200px;
    margin: 0 auto;
}

.static-navbar nav{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-evenly;
	margin-top: 40px;
	/*border: 2px solid blue;*/
}

.text {
	color: grey;
	text-decoration: none;
}


.website-wrapper header{
	display: flex;
	flex-wrap: wrap;
	justify-content: space-evenly;
	margin-top: 40px;
	margin-bottom: 40px;
	/*border: 2px solid black;*/
	
}

h1{
	font-size: 80px;
	margin-bottom: 50px;
}

.button {
	border: 2px solid black;
	padding: 5px 40px;
	color: black;
	text-decoration: none;

}

/*.top header nav a {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
	color: gray;
	text-decoration: none;
	border: 2px solid blue;
}
.logo {
	margin: 0 auto;
	padding-left: 94px;
	
} 
.top {
	border-bottom: 2px solid black;
	border-spacing: 200px;
}
h1{
	display: inline-block;
	font-size: 100px;
	padding-left: 15%;
	margin: 0 auto;
	
}
.head-img {
	margin-right: 0 auto;
	float: right;
}
h4{
	display: inline-block;
	border: 2px solid black;
	max-width: 500px;
	margin: 20px 20% 100px;
	padding: 7px 35px; x
}
*/ 
/* done below just need borders */

.mid1{
	display: flex;
	flex-direction:row;
	justify-content: space-around;
	margin-top: 10px;
	padding-top: 40px;
	border-top: 2px solid black;
}

.fa {
	width: 50%;
}

.mid-img {
	display: flex;
	margin: 30px 10%;
}

.mid2{
	display: flex;
	flex-direction: row;
	justify-content: space-between;	
	margin-bottom: 40px;
}

.spv {
	width: 33%;
}

.addy {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	margin-top: 10px;
	padding-top: 40px;
	border-top: 2px solid black;
}

.copy {
	display: flex;
	flex-direction: row;
	justify-content: center;
	margin-bottom: 100px;
}
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */

@media screen and (max-width: 800px){
    body{
        background-color: CORNSILK;
    }
    .contain {
        width: 800px;
        margin: 0 auto;
    }
    .static-navbar {
        width: 750px;
    }
    .website-wrapper {
        width: 740px;
    }

    header h1 {
        

        font-size: 50px;

    }

    header img{
        height: 280px;
        width: 280px;
    }



    
    .mid1 {
        width: 750px;
    }

    .mid2 {
        width: 750px;
        height:  200px;
        
    }

    .fa {
        width: 350px;
    }

    .spv{
        border: 2px;
        width: 32%;
        
    }

    .mid-img .middle-img{
        width: 600px;
    }


}

/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */


@media screen and (max-width: 500px){
    body{
        background-color:HONEYDEW;
    }

    .contain {
        width: 500px;
        margin: 0 auto;
    }
   /* --------------------- DONE ABOVE ------------------ */

    .static-navbar {
        width: 450px;
    }
    .website-wrapper {
        width: 440px;
        height: 230px;
    }

    header h1 {
        

        font-size: 30px;

    }

    header img{
        height: 170px;
        width: 170px;
    }
    

    /* --------------------- DONE BELOW ------------------ */

    .mid1 {
        width: 450px;
    }

    .mid2 {
        width: 470px;
        height: 220px;
        border: 2px;
        justify-content: center;
        
        
    }

    .fa {
        width: 150px;
    }

    .spv{
        width: 100px;
        border: 2px;
        width: 32%;
    }

    .mid-img .middle-img{
        width: 400px;
        
    }


}

